Incrementa janela de edição para permitir edição apenas 24h após a criação da ocorrencia. Closes #2
